--- a/youtube-absolute-dates.safariextension/index.html
+++ b/youtube-absolute-dates.safariextension/index.html
@@ -3,7 +3,7 @@
     <head>
         <script src="config.js" type="text/javascript"></script>
         <script src="main.js" type="text/javascript"></script>
-        <script src="https://apis.google.com/js/client.js?onload=onClientLoad" type="text/javascript"></script>
+        <!-- <script src="https://apis.google.com/js/client.js?onload=onClientLoad" type="text/javascript"></script> -->
     </head>
     <body>
         <pre id="response"></pre>
