--- a/youtube-absolute-dates.safariextension/index.html
+++ b/youtube-absolute-dates.safariextension/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
     <head>
+        <script src="http://momentjs.com/downloads/moment.min.js" type="text/javascript"></script>
         <script src="config.js" type="text/javascript"></script>
         <script src="main.js" type="text/javascript"></script>
         <!-- <script src="https://apis.google.com/js/client.js?onload=onClientLoad" type="text/javascript"></script> -->
